--- a/html1.html
+++ b/html1.html
@@ -9,7 +9,7 @@
 
     <div class="first">
         <h1 class="heading" >MOTHER TERESA</h1>
-        <p class="quote">mother of the poor & needy</p>
+        <p><div class="quote">mother of the poor & needy</div></p>
     </div>
     <div >
         <ul class="list">
