--- a/html1.html
+++ b/html1.html
@@ -28,7 +28,7 @@
     </div>
     <div class="words">
     
-    <p >“Every time you smile at someone, it is an action of love, a gift to that person, a beautiful thing.”</p>
+    <p class="said" >“Every time you smile at someone, it is an action of love, a gift to that person, a beautiful thing.”</p>
    <p class="saidby">-MOTHER TERESA</p>
 </div>
     <div class="details">
