--- a/html1.html
+++ b/html1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>TRIBUTE PAGE</title>
-    <meta name="viewport" charaset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body >  
